--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,3 +3,4 @@
 @forward './partials/colors/';
 @forward './partials/utilities/_buttons.scss';
 @forward './partials/utilities/modal.scss';
+@forward './partials/layout';
