--- a/scss/partials/typography/_typography.scss
+++ b/scss/partials/typography/_typography.scss
@@ -7,6 +7,14 @@ h2 {
   font-weight: 500;
 }
 
+a {
+  text-decoration: none;
+}
+
+.p-a {
+  text-decoration: underline;
+}
+
 .flex-cont {
   font-weight: 300;
 }
