--- a/blur.css
+++ b/blur.css
@@ -1,3 +1,14 @@
+body {
+  background-color: #fcfcfc;
+}
+
+.cover {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
 .blur-in {
   -webkit-animation: blur 2s forwards;
   -moz-animation: blur 2s forwards;
@@ -154,4 +165,87 @@
     -ms-filter: blur(0px);
     filter: blur(0px);
   }
+}
+
+.content {
+  width: 650px;
+  margin: 0 auto;
+  padding-top: 100px;
+}
+
+span {
+  color: dimgray;
+}
+
+.pop-up {
+  position: fixed;
+  margin: 5% auto;
+  left: 25%;
+  right: 25%;
+  z-index: 2;
+}
+
+.box {
+  background-color: whitesmoke;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  position: relative;
+  -webkit-box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1);
+}
+
+.button {
+  margin: 0 auto;
+  background-color: #ff8566;
+  margin-bottom: 33px;
+}
+
+.button:hover {
+  background-color: #7ccf29;
+  -webkit-box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1);
+}
+
+.close-button {
+  transition: all 0.5s ease;
+  position: absolute;
+  background-color: #ff9980;
+  padding: 1.5px 7px;
+  left: 0;
+  margin-left: -10px;
+  margin-top: -9px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  color: white;
+  -webkit-box-shadow: -4px -2px 6px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: -4px -2px 6px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: -3px 1px 6px 0px rgba(0, 0, 0, 0.1);
+}
+
+.close-button:hover {
+  background-color: tomato;
+  color: #fff;
+}
+
+h3 {
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: #fff;
+  background-color: #ff704d;
+}
+
+p {
+  padding: 20px 65px 10px 65px;
+  color: dimgray;
+}
+
+h1 {
+  color: dimgray;
+  font-family: Garamond, Baskerville, 'Baskerville Old Face', 'Hoefler Text',
+    'Times New Roman', serif;
 }
