--- a/scss/partials/utilities/_modal.scss
+++ b/scss/partials/utilities/_modal.scss
@@ -1,6 +1,6 @@
 //NOTE: .modal-close-btn located in _buttons.scss
 .modal {
-  visibility: visible;
+  visibility: hidden;
 }
 
 .modalWindow {
@@ -16,6 +16,7 @@
   border-radius: 10px;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
   padding: 1.5rem;
+  z-index: 2;
 }
 
 .modalOverlay {
@@ -24,6 +25,7 @@
   width: 100vw;
   position: absolute;
   top: 0;
+  z-index: 1;
 }
 
 .active {
