--- a/scss/partials/utilities/_modal.scss
+++ b/scss/partials/utilities/_modal.scss
@@ -31,3 +31,19 @@
 .active {
   visibility: visible;
 }
+
+.album {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 3;
+  background-color: whitesmoke;
+  color: var(--pri-clr-lt);
+  padding: 4px 0;
+  text-align: center;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+}
+
+.hidden {
+  visibility: hidden;
+}
